welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:1: error: not found: value cigarss
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = { if (!isWeekend) {return (cigars>39)&&(cigarss<61)}
                                                                                                ^